# pydance

./: .gitignore  Makefile.general  announcer.py  arrows.py  check_python2_issues.py  check_settings.py  colors.py  combos.py  config.py  configure_install.py  constants.py  courses.py  courseselect.py  dance.py  dance2.py  dance_minimal.py  debug_steps.py  dump_steps.py  endless.py  error.py  fileparsers.py  fix_imports_correct.py  fix_python3.py  fontfx.py  fonttheme.py  games.py  gameselect.py  gfxtheme.py  grades.py  gradescreen.py  i18n.py  inspect_steps.py  interface.py  judge.py  key_test.py  lifebars.py  listener.py  log_config.py  lyrics.py  menudriver.py  (+27 more)
.github/workflows/: ci.yml
mo/ca/LC_MESSAGES/: pydance.mo
mo/sk/LC_MESSAGES/: pydance.mo
pydance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: inject_module_loggers.py
tests/: conftest.py  test_colors_unit.py  test_config_unit.py  test_fixture_pipeline.py  test_gfxtheme.py  test_imports.py  test_interface_listbox_mouse.py  test_judge_unit.py  test_listener_unit.py  test_pad_delete_event.py  test_pydance_songlist.py  test_records_unit.py  test_regression_py3.py  test_resource_checks.py  test_sdl_env.py  test_song_folder_layout.py  test_song_loading.py  test_songs_dir_smoke.py  test_sort_regression.py  test_stats_grades.py  test_stdin_keys.py  test_step_trace.py  test_stepfilters.py  test_stepfilters_compress_param.py  test_steps_object.py  test_themes.py  test_ui_keyboard_plumbing.py  test_ui_smoke_imports.py  test_util.py
tests/fixtures/: minimal.dance
utils/: findbpm.py  pyjoy.py
